# flutter_opencc_ffi

flutter_opencc_ffi/: pubspec.yaml
flutter_opencc_ffi/example/: pubspec.yaml
flutter_opencc_ffi/example/lib/: main.dart
flutter_opencc_ffi/example/ohos/: build-profile.json5  oh-package.json5
flutter_opencc_ffi/example/ohos/AppScope/: app.json5
flutter_opencc_ffi/example/ohos/AppScope/resources/base/element/: string.json
flutter_opencc_ffi/example/ohos/entry/: oh-package.json5
flutter_opencc_ffi/example/ohos/entry/src/main/ets/plugins/: GeneratedPluginRegistrant.ets
flutter_opencc_ffi/example/ohos/entry/src/main/resources/base/element/: string.json
flutter_opencc_ffi/example/ohos/entry/src/main/resources/zh_CN/element/: string.json
flutter_opencc_ffi/lib/: flutter_opencc_ffi.dart
flutter_opencc_ffi_android/: pubspec.yaml
flutter_opencc_ffi_ios/: pubspec.yaml
flutter_opencc_ffi_macos/: pubspec.yaml
flutter_opencc_ffi_native/: README.md  pubspec.yaml
flutter_opencc_ffi_native/lib/src/: converter_ffi.dart  init_native.dart
flutter_opencc_ffi_ohos/: .gitignore  .metadata  README.md  pubspec.yaml
flutter_opencc_ffi_ohos/ohos/: build-profile.json5  oh-package.json5
flutter_opencc_ffi_ohos/ohos/src/main/: module.json5
flutter_opencc_ffi_web/: pubspec.yaml
flutter_opencc_ffi_windows/: pubspec.yaml
opencc_library/OpenCC/: README.md
opencc_library/OpenCC/src/: CMakeLists.txt
opencc_library/ohos/: CMakeLists.txt
